[package]
name = "highly-composite-numbers"
version = "0.1.0"
description = "Find highly composite numbers"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"]}
lazy_static = "1.4.0"